# py-cp3

./: .gitignore  README.md  pyproject.toml  requirements.txt
boids/: README.md  TASK.md  config.py  funcs.py  main.py
ferromagnetic/: README.md  ferromagnetic_calculate.py  ferromagnetic_energy_problem_2d.ipynb
fractals/: README.md
heat_transfer/: README.md  TASK.md  heat_transfer.py  heat_transfer_problem_2d.ipynb
light_waves/: README.md  lens_model.py  runner.py  triangular_lens.py  utils.py
procrustes/: README.md  TASK.md
shaders/: README.md  custom_halo.py  custom_sakura.py  sakura.py  ui_noise_halo.py  utils.py
unstable_orbits/: README.md  unstable_orbits.ipynb  unstable_orbits.py
