[tool.poetry]
name = "py-cp3"
version = "0.1.0"
description = ""
authors = ["rmnigm"]
readme = "README.md"
packages = [{include = "py_cp3"}]

[tool.poetry.dependencies]
python = "3.9.16"
numpy = "<1.24"
numba = "^0.56.4"
pandas = "^2.0.0"
scipy = "^1.10.1"
scikit-learn = "^1.2.2"
tqdm = "^4.65.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
vispy = "^0.12.2"
ffmpeg-python = "^0.2.0"
imageio = "^2.27.0"
imageio-ffmpeg = "^0.4.8"
jupyterlab = "^3.6.3"
taichi = "^1.5.0"
taichi-glsl = "^0.0.12"
holoviews = {extras = ["recommended"], version = "^1.15.4"}
pyqt6 = "^6.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
